--- a/개발문서읽기.md
+++ b/개발문서읽기.md
@@ -4,3 +4,4 @@
 |------|---|---|
 |Airbnb System desing 분석|문서화를 통한 airbnb 시스템 분석글<br/>분석부터 설계까지|https://www.joinc.co.kr/w/man/12/airbnbDesign|
 |클라우드 개요|21년 기준의 클라우드에 대한 설명<br/>클라우드의 유형|https://www.joinc.co.kr/w/man/12/aws/cloudconcepts|
+|실시간 문서 협업은 어떻게 동작할까|Operational Transform을 통한 문서 협업 |https://www.secmem.org/blog/2019/01/09/operational-transform/|
