--- a/개발문서읽기.md
+++ b/개발문서읽기.md
@@ -1,8 +1,9 @@
 # 개발읽기
 
-|제목|내용|주소|
-|------|---|---|
-|Airbnb System desing 분석|문서화를 통한 airbnb 시스템 분석글<br/>분석부터 설계까지|https://www.joinc.co.kr/w/man/12/airbnbDesign|
-|클라우드 개요|21년 기준의 클라우드에 대한 설명<br/>클라우드의 유형|https://www.joinc.co.kr/w/man/12/aws/cloudconcepts|
-|실시간 문서 협업은 어떻게 동작할까|Operational Transform을 통한 문서 협업 |https://www.secmem.org/blog/2019/01/09/operational-transform/|
-|인프런 수습 회고|개발자가 갖춰야할 역량과 그 정도에 대하여|https://jojoldu.tistory.com/612https://jojoldu.tistory.com/612|
+|날짜|제목|내용|주소|
+|------|------|---|---|
+|20121-11-10|Airbnb System desing 분석|문서화를 통한 airbnb 시스템 분석글<br/>분석부터 설계까지|https://www.joinc.co.kr/w/man/12/airbnbDesign|
+|20121-11-11|클라우드 개요|21년 기준의 클라우드에 대한 설명<br/>클라우드의 유형|https://www.joinc.co.kr/w/man/12/aws/cloudconcepts|
+|20121-11-12|실시간 문서 협업은 어떻게 동작할까|Operational Transform을 통한 문서 협업 |https://www.secmem.org/blog/2019/01/09/operational-transform/|
+|20121-11-13|인프런 수습 회고|개발자가 갖춰야할 역량과 그 정도에 대하여|https://jojoldu.tistory.com/612https://jojoldu.tistory.com/612|
+|20121-11-14|HTML을 정규 표현식만으로 파싱할 수 있을까?|정규표현식에 대하여<br/>정규표현식으로 가능한 것과 불가능한 것|https://evan-moon.github.io/2021/05/07/why-regexp-called-regexp/|
