--- a/개발문서읽기.md
+++ b/개발문서읽기.md
@@ -9,3 +9,4 @@
 |2021-11-14|HTML을 정규 표현식만으로 파싱할 수 있을까?|정규표현식에 대하여<br/>정규표현식으로 가능한 것과 불가능한 것|https://evan-moon.github.io/2021/05/07/why-regexp-called-regexp/|
 |2021-11-15|518일동안 단 하루도 빠지지 않고 알고리즘을 풀었다.|영어, 수학, 알고리즘 공부의 이유|https://kwiki.devserum.com/ko/articles/tech-articles/2021-05-31-518-consecutive-days-algorithm-challenge|
 |2021-11-16|LINE Search UI 개선기|코드리뷰와 QA로 UI/UX 개선 품질 향상<br/>조금씩 쌓이는 느낌들이 전체적인 이미지를 만든다|https://engineering.linecorp.com/ko/blog/improve-line-search-ui/|
+|2021-11-17|CODE GURU REVIEWER를 사용하여 코드리뷰 받기|AWS 신규기능 code guru<br/>aws데이터에 기반한 코드 리뷰 서비스|https://blog.dramancompany.com/2021/11/code-guru-reviewer%eb%a5%bc-%ec%82%ac%ec%9a%a9%ed%95%98%ec%97%ac-%ec%bd%94%eb%93%9c%eb%a6%ac%eb%b7%b0-%eb%b0%9b%ea%b8%b0/|
