--- a/개발문서읽기.md
+++ b/개발문서읽기.md
@@ -10,3 +10,4 @@
 |2021-11-15|518일동안 단 하루도 빠지지 않고 알고리즘을 풀었다.|영어, 수학, 알고리즘 공부의 이유|https://kwiki.devserum.com/ko/articles/tech-articles/2021-05-31-518-consecutive-days-algorithm-challenge|
 |2021-11-16|LINE Search UI 개선기|코드리뷰와 QA로 UI/UX 개선 품질 향상<br/>조금씩 쌓이는 느낌들이 전체적인 이미지를 만든다|https://engineering.linecorp.com/ko/blog/improve-line-search-ui/|
 |2021-11-17|CODE GURU REVIEWER를 사용하여 코드리뷰 받기|AWS 신규기능 code guru<br/>aws데이터에 기반한 코드 리뷰 서비스|https://blog.dramancompany.com/2021/11/code-guru-reviewer%eb%a5%bc-%ec%82%ac%ec%9a%a9%ed%95%98%ec%97%ac-%ec%bd%94%eb%93%9c%eb%a6%ac%eb%b7%b0-%eb%b0%9b%ea%b8%b0/|
+|2021-11-18|통계 서버를 구축하며!|통계 시스템 최적화를 위한 개선 작업<br/>다양한 시행 착오와 새로운 기술 적용|https://medium.com/uniquegood/%ED%86%B5%EA%B3%84-%EC%84%9C%EB%B2%84%EB%A5%BC-%EA%B5%AC%EC%B6%95%ED%95%98%EB%A9%B0-c071c6d4f945|
