--- a/개발문서읽기.md
+++ b/개발문서읽기.md
@@ -11,3 +11,7 @@
 |2021-11-16|LINE Search UI 개선기|코드리뷰와 QA로 UI/UX 개선 품질 향상<br/>조금씩 쌓이는 느낌들이 전체적인 이미지를 만든다|https://engineering.linecorp.com/ko/blog/improve-line-search-ui/|
 |2021-11-17|CODE GURU REVIEWER를 사용하여 코드리뷰 받기|AWS 신규기능 code guru<br/>aws데이터에 기반한 코드 리뷰 서비스|https://blog.dramancompany.com/2021/11/code-guru-reviewer%eb%a5%bc-%ec%82%ac%ec%9a%a9%ed%95%98%ec%97%ac-%ec%bd%94%eb%93%9c%eb%a6%ac%eb%b7%b0-%eb%b0%9b%ea%b8%b0/|
 |2021-11-18|통계 서버를 구축하며!|통계 시스템 최적화를 위한 개선 작업<br/>다양한 시행 착오와 새로운 기술 적용|https://medium.com/uniquegood/%ED%86%B5%EA%B3%84-%EC%84%9C%EB%B2%84%EB%A5%BC-%EA%B5%AC%EC%B6%95%ED%95%98%EB%A9%B0-c071c6d4f945|
+|2021-11-19|한명의 개발자를 양성하기까지|우아한 형제들의 신규개발자 양성 과정<br/>개발자 양성의 의의와 좋은 육성 과정의 예|https://techblog.woowahan.com/5977/|
+|2021-11-20|우아~한 장애대응|우아한 형제들의 장애 대응 프로세스<br/>장애를 대하는 자세, 그리고 대처하는 자세<br/>실수를 방지할 수 있도록 시스템이 막아줄 수 있어야 한다.|https://techblog.woowahan.com/4886/|
+|2021-11-21|크롬 익스텐션에서 데이터를 어떻게 다룰 것인가? (피트스탑과제 – 크롬 익스텐션 개발기)|여러 폼의 입력을 자동으로 넣어주는 익스텐션 개발기<br/>indexedDB의 활용 |https://techblog.woowahan.com/5900/|
+|2021-11-22|어떻게하면 구글링을 잘 할까?|구글링의 이유와 다양한 검색 방법|https://geonlee.tistory.com/252|
