--- a/개발문서읽기.md
+++ b/개발문서읽기.md
@@ -16,3 +16,4 @@
 |2021-11-21|크롬 익스텐션에서 데이터를 어떻게 다룰 것인가? (피트스탑과제 – 크롬 익스텐션 개발기)|여러 폼의 입력을 자동으로 넣어주는 익스텐션 개발기<br/>indexedDB의 활용 |https://techblog.woowahan.com/5900/|
 |2021-11-22|어떻게하면 구글링을 잘 할까?|구글링의 이유와 다양한 검색 방법|https://geonlee.tistory.com/252|
 |2021-11-23|테스트코드, 리팩토링 입문기|테스트코드 작성을 통한 리펙토링 익히기<br/>기능개발과 리펙토링의 분리|https://velog.io/@hohooodo/%ED%85%8C%EC%8A%A4%ED%8A%B8%EC%BD%94%EB%93%9C-%EB%A6%AC%ED%8C%A9%ED%86%A0%EB%A7%81-%EC%9E%85%EB%AC%B8%EA%B8%B0|
+|2021-11-24|Observability: 로그라고해서 다 같은 로그가 아니다(1/2)|로그를 남기는 유형별 설명<br/>단순히 로그만 남기는 것이 아니라 활용하기 쉽게 정의하고 구조화하는 것이 필요|https://netmarble.engineering/observability-logging-a/|
