--- a/개발문서읽기.md
+++ b/개발문서읽기.md
@@ -19,3 +19,4 @@
 |2021-11-24|Observability: 로그라고해서 다 같은 로그가 아니다(1/2)|로그를 남기는 유형별 설명<br/>단순히 로그만 남기는 것이 아니라 활용하기 쉽게 정의하고 구조화하는 것이 필요|https://netmarble.engineering/observability-logging-a/|
 |2021-11-25|1. 코로나 시대에서의 WebRTC|구글의 p2p 방식 WebRTC에 대한 소개<br/>원리 및 활용 사례, 대부분의 실시간 음성/화상 서비스에서 사용됨|https://brunch.co.kr/@springboot/639<br/>https://brunch.co.kr/@springboot/640|
 |2021-11-26|이모티콘 서비스는 왜 MSA를 선택했나?|카카오톡 이모티콘 서비스 MSA 적용기<br/>분석 및 적용 과정|https://tech.kakao.com/2021/09/14/msa/|
+|2022-01-24|2010년의 카카오에서 있었던 일 1편|서비스가 처음 개발되는 과정과 마음가짐<br/>카카오톡 개발기|https://medium.com/@indongyoo/2010%EB%85%84%EC%9D%98-%EC%B9%B4%EC%B9%B4%EC%98%A4%EC%97%90%EC%84%9C-%EC%9E%88%EC%97%88%EB%8D%98-%EC%9D%BC-1-f29428291e7a|
